--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <main>
   </main>
-
+  <header>
+    <h1>name company</h1>
+  </header>
   <footer class="footer">
     <div class="footer-grid">
       <!-- Кнопка "Записи" -->
