Исправлены ошибки: CSS синтаксис, опечатки, добавлен .gitignore и requirements.txt

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </footer>
 
   <script>
-  // Применяем тему немедленно — даже до DOMContentLoade
+  // Применяем тему немедленно — даже до DOMContentLoaded
   function applyTheme() {
     let isDark = false;
     if (window.Telegram?.WebApp) {
