Миграция на FSD архитектуру
- Реорганизован backend с модульной структурой (shared, features)
- Реорганизован frontend по слоям FSD (app, pages, widgets, entities, shared)
- Создана документация проекта (README.md)
- Обновлены пути и конфигурация
- Сохранены все функции приложения

--- a/index.html
+++ b/index.html
@@ -1,85 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Записи</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link rel="stylesheet" href="main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=frontend/index.html">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Перенаправление...</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #f5f5f5;
+    }
+    .message {
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
-  <main></main>
-  <footer class="footer">
-    <div class="footer-grid">
-      <button class="footer-btn active" data-tab="records">
-        <svg viewBox="0 0 24 24">
-          <path d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-        </svg>
-        <span>Записи</span>
-      </button>
-      <button onclick="document.location='components/settings.html'" class="footer-btn" data-tab="settings">
-        <svg viewBox="0 0 24 24">
-          <path d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-          <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-        </svg>
-        <span>Настройки</span>
-      </button>
-    </div>
-  </footer>
-
+  <div class="message">
+    <h2>Перенаправление...</h2>
+    <p>Если автоматическое перенаправление не работает, <a href="frontend/index.html">нажмите здесь</a>.</p>
+  </div>
   <script>
-  // Применяем тему немедленно — даже до DOMContentLoaded
-  function applyTheme() {
-    let isDark = false;
-    if (window.Telegram?.WebApp) {
-      isDark = Telegram.WebApp.colorScheme === 'dark';
-    } else if (window.matchMedia) {
-      isDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    }
-    document.documentElement.className = isDark ? 'theme-dark' : '';
-  }
-
-
-  // Применяем тему СРАЗУ (на случай, если DOM уже загружен)
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', applyTheme);
-  } else {
-    applyTheme();
-  }
-
-  // Инициализация Telegram
-  if (window.Telegram?.WebApp) {
-    const tg = Telegram.WebApp;
-
-    // Гарантируем, что ready() вызван один раз
-    if (!tg.isReady) {
-      tg.ready();
-      tg.isReady = true;
-    }
-
-    tg.expand();
-    tg.disableVerticalSwipes();
-
-    // Подписываемся на смену темы
-    tg.onEvent('themeChanged', applyTheme);
-
-    // Дополнительно: принудительно обновляем тему через 100 мс (на случай гонки)
-    setTimeout(applyTheme, 100);
-  } else {
-    // Для браузера
-    if (window.matchMedia) {
-      window.matchMedia('(prefers-color-scheme: dark)')
-        .addEventListener('change', applyTheme);
-    }
-  }
-
-  // Блокировка прокрутки
-  if (window.Telegram?.WebApp) {
-    const preventDefault = (e) => e.preventDefault();
-    document.addEventListener('touchmove', preventDefault, { passive: false });
-    document.addEventListener('wheel', preventDefault, { passive: false });
-    document.addEventListener('gesturestart', preventDefault);
-  }
-</script>
+    window.location.href = 'frontend/index.html';
+  </script>
 </body>
 </html>
