Добавлена кликабельность страниц настроек
- Добавлена навигация для разделов настроек
- Добавлена визуальная индикация (стрелки вправо)
- Анимация стрелок при наведении
- Уведомления 'Будет доступно' для разделов в разработке
- Улучшена структура HTML с settings-item-content
- Добавлен стиль активного состояния (:active)

--- a/frontend/src/pages/settings/index.html
+++ b/frontend/src/pages/settings/index.html
@@ -24,20 +24,48 @@
       <h1>⚙️ Настройки</h1>
       <div class="settings-menu">
         <div class="settings-item">
-          <h3>👤 Профиль</h3>
-          <p>Редактировать личную информацию</p>
+          <div class="settings-item-content">
+            <div class="settings-item-text">
+              <h3>👤 Профиль</h3>
+              <p>Редактировать личную информацию</p>
+            </div>
+            <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
         </div>
         <div class="settings-item">
-          <h3>⏰ График работы</h3>
-          <p>Настроить расписание</p>
+          <div class="settings-item-content">
+            <div class="settings-item-text">
+              <h3>⏰ График работы</h3>
+              <p>Настроить расписание</p>
+            </div>
+            <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
         </div>
         <div class="settings-item">
-          <h3>✂️ Услуги</h3>
-          <p>Управление списком услуг</p>
+          <div class="settings-item-content">
+            <div class="settings-item-text">
+              <h3>✂️ Услуги</h3>
+              <p>Управление списком услуг</p>
+            </div>
+            <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
         </div>
         <div class="settings-item">
-          <h3>👥 Управление</h3>
-          <p>Управление клиентами и записями</p>
+          <div class="settings-item-content">
+            <div class="settings-item-text">
+              <h3>👥 Управление</h3>
+              <p>Управление клиентами и записями</p>
+            </div>
+            <svg class="settings-item-arrow" viewBox="0 0 24 24" width="20" height="20">
+              <path d="M9 18l6-6-6-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
         </div>
       </div>
     </div>
