🔒 Критические исправления безопасности и функциональности
✅ Добавлена обязательная авторизация через Telegram
- Auth Guard блокирует доступ без авторизации
- Проверка initData и user на каждой странице
- Блокирующий экран при отсутствии авторизации

✅ Исправлены CORS настройки
- Конкретные порты вместо wildcards
- Правильные методы и заголовки

✅ Создан конфиг для API URL
- Автоматическое переключение dev/prod
- Централизованная конфигурация

✅ Добавлена валидация данных
- Проверка формата телефона
- Валидация текстовых полей
- Trim и проверка длины

✅ Настроена ротация логов
- Максимум 10MB на файл
- 5 резервных копий
- Уменьшено логирование httpx

✅ Улучшена обработка ошибок БД
- SystemExit при ошибке инициализации
- Критические ошибки логируются

✅ Добавлены файлы безопасности
- .gitignore для защиты секретов
- env.example как шаблон

📚 Добавлена документация
- START_HERE.md - быстрый старт
- SETUP_INSTRUCTIONS.md - подробная инструкция
- CHANGELOG.md - журнал изменений
- SECURITY_REVIEW.md - отчет о безопасности
- QUICK_FIXES.md - готовые решения
- PROJECT_SUMMARY.md - краткая сводка

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,7 @@
 
   <!-- App Scripts -->
   <script type="module" src="src/app/providers/telegram/init.js"></script>
+  <script type="module" src="src/app/providers/auth/guard.js"></script>
   <script type="module" src="src/app/config/theme.js"></script>
   
   <!-- Page Scripts -->
