--- a/frontend/src/pages/profile/index.html
+++ b/frontend/src/pages/profile/index.html
@@ -142,6 +142,7 @@
 
   <!-- App Scripts -->
   <script type="module" src="../../app/providers/telegram/init.js"></script>
+  <script type="module" src="../../app/providers/auth/guard.js"></script>
   <script type="module" src="../../app/config/theme.js"></script>
   
   <!-- Page Scripts -->
