--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
 
   <!-- App Scripts -->
   <script type="module" src="src/app/providers/telegram/init.js"></script>
-  <script type="module" src="src/app/providers/auth/guard.js"></script>
+  <!-- Auth Guard не нужен для страницы записей - там нет пользовательских данных -->
   <script type="module" src="src/app/config/theme.js"></script>
   
   <!-- Page Scripts -->
